Fixar word wrapping of youtube-klipp-bredd.

--- a/public/css/320.css
+++ b/public/css/320.css
@@ -27,7 +27,7 @@
         height: 230px;
     }
 
-    .time-link {
+    a.time-link {
         padding: 50px 50px 46px;
         font-size: 27px;
         line-height: 1.2em;
@@ -76,7 +76,7 @@
         height: 168px;
     }
 
-    .time-link {
+    a.time-link {
         padding: 50px 30px 46px;
         font-size: 20px;
         max-width: 276px;
