--- a/public/css/768.css
+++ b/public/css/768.css
@@ -51,7 +51,7 @@
         font-size: 26px;
     }
 
-    .time-link {
+    a.time-link {
         margin-right: 58px;
     }
 
@@ -131,7 +131,7 @@
         height: 88px;
     }
 
-    .time-link {
+    a.time-link {
         font-size: 30px;
     }
 
